# Image-Stats-Explorer

./: .gitignore  AGENTS.md  ImageStatsExplorer.spec  README.md  build.ps1  pyproject.toml
src/image_stats_explorer/: __init__.py  app.py  canvas.py  rendering.py
